--- a/src/components/Bar/Bar.css
+++ b/src/components/Bar/Bar.css
@@ -1,9 +1,16 @@
+.bar-bg{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+  height: 400px;
+}
+
 .bar{
     background-color: blue;
     color: white;
     width: 30px;
     display: flex;
     align-items: flex-end;
-    padding-bottom: 10px;
     justify-content: center;
-  }
+}
